2012-12-24 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	GS key-window hack, for GWorkspace cooperation

2012-04-17 Riccardo Mottola <rm@gnu.org>

	* FileTable.m
	Fix random generator to work in the [0, count) range

2012-04-17 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Fix wrong type.

2011-08-25 Riccardo Mottola <rm@gnu.org>

	* AppController.m:
	Set random seed

	* LMFlipView.m:
	Recognize space as next

2011-08-10 Riccardo Mottola <rm@gnu.org>

	* FileTable.[h,m]
	* AppController.[h,m]
	* English.lproj/LaternaMagica.nib
	Scramble list.

2011-01-27 Riccardo Mottola <rm@gnu.org>
	* AppController.h
	* AppController.m
	* English.lproj/LaternaMagica.nib
	clear list command.

2011-01-22 Riccardo Mottola <rm@gnu.org>
	*  LMFlipView.m
	Track delete, backspace, up and down events