@@ -1,3 +1,9 @@
+2012-12-25 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
+	* FileTable.m
+	Table drag-target, for files only.
+
 2012-12-24 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
